[gd_scene load_steps=4 format=3 uid="uid://1mmb8l3m3yc8"]

[ext_resource type="Script" uid="uid://bfal8pbq2aq3t" path="res://Scripts/cards.gd" id="1_y6mwy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6mwy"]
size = Vector2(36, 64)

[sub_resource type="LabelSettings" id="LabelSettings_iurns"]
font_size = 10

[node name="Node2D" type="Node2D"]
script = ExtResource("1_y6mwy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y6mwy")

[node name="Container" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -32.0
offset_right = 18.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardName" type="Label" parent="Container"]
layout_mode = 2
offset_right = 36.0
offset_bottom = 23.0
text = "tytul"
label_settings = SubResource("LabelSettings_iurns")
horizontal_alignment = 1

[node name="CardDescription" type="Label" parent="Container"]
layout_mode = 0
offset_top = 24.0
offset_right = 36.0
offset_bottom = 89.0
text = "opis"
label_settings = SubResource("LabelSettings_iurns")
horizontal_alignment = 1
autowrap_mode = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
